0.8 to current

	Turned remote commands back on by default after their rewrite using
	named pipes instead of insecure UDP sockets.

	Removed vifmrc-converter.  It's been around for four years and not needed
	any more.  Thanks to filterfalse.

	Added :winc[md] command-line command.  Thanks to fogine.

	Added layoutis() builtin function that answers queries about current
	interface configuration.  Thanks to fogine.

	Added paneisat() builtin function that answers queries about current pane
	position.  Thanks to fogine.

	Added %pc macro that splits preview command in two pices: preview command
	and clear command.  Thanks to Tomek K. (a.k.a. TomiCode).

	Added set of :*Vim commands to vifm ran from Vim plugin, which overrule
	initial :*Vifm command behaviour.  Thanks to Ross Hadden (a.k.a.
	rosshadden).

	Added special treatment for "*" as value of 'slowfs', which might be
	useful in case of very slow handling of requests to mounts enumeration.
	Patch by Cosmin Popescu (a.k.a. cosminadrianpopescu).

	Added handling of "-" command-line argument specified in place of
	directory path as instruction to read list of files from stdin.

	Added B key to menus, which acts like b, but creates unsorted (very
	custom) view.  Thanks to filterfalse.

	Added match numbers to search messages on status bar.  Patch by Cosmin
	Popescu (a.k.a. cosminadrianpopescu).

	Added exclamation mark to :shell to suppress spawning new teminal
	multiplexer pane.  Patch by Cosmin Popescu (a.k.a. cosminadrianpopescu).

	Added fileext sorting key, which sorts files by extensions and directories
	by name.  Patch by Cosmin Popescu (a.k.a. cosminadrianpopescu).

	Added :setl[ocal] and :setg[lobal] commands to manage values of local
	options that are specific to current directory and are reset on directory
	change, similar to local options of Vim.

	Added zr normal mode key to reset local filter.  Thanks to filterfalse.

	Added named bookmarks (paths are associated with tags).  This adds :bmark,